petcards gap fixed

--- a/styles/PetCards.module.css
+++ b/styles/PetCards.module.css
@@ -14,5 +14,6 @@
 @media screen and (max-width: 576px) {
   .cards {
     grid-template-columns: 1fr;
+    gap: 80px;
   }
 }
